--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -14,3 +14,14 @@
 .link {
   border: 1px solid black;
 }
+.home{
+	height: 100vh;
+}
+.footer{
+	margin-top: 88vh;
+}
+
+.cardTitle{
+	margin-top: 100px;
+	text-align: center;
+}
