--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -1,46 +1,164 @@
+
 .logout{
     background-color: red;
 }
-.top-bar-right {
-  width: 40% !important;
-  display: inline-block !important;
-  margin: 0 auto !important;
-}
-.top-bar-left {
-  width: 40% !important;
-  display: inline-block !important;
-  margin: 0 auto !important;
-}
+
 .link {
   border: 1px solid black;
 }
 .home{
 	height: 100vh;
+	padding-left: 100px;
+	padding-right: 100px;
 }
 .footer{
-	margin-top: 88vh;
+	margin-top: 85vh;
 }
 
-.cardTitle{
+.about{
 	margin-top: 100px;
 	text-align: center;
 }
+#homeDiv{
+	background-image: url(http://res.cloudinary.com/dy6bqhnor/image/upload/v1491185850/bridges-1180_nuwhgz.jpg);
+	background-position: center; 
+	height: 100vh;
+	z-index: 100;
 
+}
+
+#cardAbout{
+	padding-right: 10%;
+	padding-left: 10%;
+	padding-top: 15%;
+	z-index: 2000;
+	text-shadow: 0px 0px 40px white;
+
+}
 
 .pin{
 	color: red;
 }
+#safe{
+	font-family: 'Spirax', cursive;
+}
+/*Login page*/
+#loginForm{
+	margin-top: 30px;
+	padding: 30px;
+}
+
+/*signup page*/
+
+#signupForm{
+	margin-top: 30px;
+	padding: 30px;
+}
+
 
 
 
 /* Dashboard Page */
+#offense{
+	color:black;
+}
+#blockLocation{
+	color:black;
+}
+
 
 .map {
-  height: 500px;
+  height: 100vh;
 }
 
 @media screen and (min-width: 1024px){
     .map {
-        height: 500px;
+        height: 100vh;
     }
+}
+
+
+#loading{
+	margin-top: 20%;
+	margin-left: 45%;;
+}
+.loader {
+  color: black;
+  font-size: 90px;
+  text-indent: -9999em;
+  overflow: hidden;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  margin: 72px auto;
+  position: relative;
+  -webkit-transform: translateZ(0);
+  -ms-transform: translateZ(0);
+  transform: translateZ(0);
+  -webkit-animation: load6 1.7s infinite ease, round 1.7s infinite ease;
+  animation: load6 1.7s infinite ease, round 1.7s infinite ease;
+}
+@-webkit-keyframes load6 {
+  0% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+  5%,
+  95% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+  10%,
+  59% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
+  }
+  20% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em, -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, -0.749em -0.34em 0 -0.477em;
+  }
+  38% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em, -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, -0.82em -0.09em 0 -0.477em;
+  }
+  100% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+}
+@keyframes load6 {
+  0% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+  5%,
+  95% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+  10%,
+  59% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.087em -0.825em 0 -0.42em, -0.173em -0.812em 0 -0.44em, -0.256em -0.789em 0 -0.46em, -0.297em -0.775em 0 -0.477em;
+  }
+  20% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.338em -0.758em 0 -0.42em, -0.555em -0.617em 0 -0.44em, -0.671em -0.488em 0 -0.46em, -0.749em -0.34em 0 -0.477em;
+  }
+  38% {
+    box-shadow: 0 -0.83em 0 -0.4em, -0.377em -0.74em 0 -0.42em, -0.645em -0.522em 0 -0.44em, -0.775em -0.297em 0 -0.46em, -0.82em -0.09em 0 -0.477em;
+  }
+  100% {
+    box-shadow: 0 -0.83em 0 -0.4em, 0 -0.83em 0 -0.42em, 0 -0.83em 0 -0.44em, 0 -0.83em 0 -0.46em, 0 -0.83em 0 -0.477em;
+  }
+}
+@-webkit-keyframes round {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
+}
+@keyframes round {
+  0% {
+    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
+  }
 }
