--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -24,18 +24,25 @@
 	background-position: center; 
 	height: 100vh;
 	z-index: 100;
-
 }
-
 #cardAbout{
 	padding-right: 10%;
 	padding-left: 10%;
 	padding-top: 15%;
 	z-index: 2000;
-	text-shadow: 0px 0px 2px;
-
+	text-shadow: 0px 0px 1px;
 }
-
+.footer {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: white;
+  text-align: center;
+  z-index: 2000;
+  color: red;
+}
 .pin{
 	color: red;
 }
